// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationErrorMessage renders an error for a custom error code 1`] = `
Array [
  "Error code: ",
  <code>
    some_other_error
  </code>,
]
`;

exports[`ValidationErrorMessage renders an error for an invalid attribute 1`] = `
Array [
  "Invalid attribute: ",
  <code>
    bar
  </code>,
]
`;

exports[`ValidationErrorMessage renders an error for an invalid attribute with parent node 1`] = `
Array [
  "Invalid attribute: ",
  <code>
    baz[bar]
  </code>,
]
`;

exports[`ValidationErrorMessage renders an error for an invalid element 1`] = `
Array [
  "Invalid element: ",
  <code>
    foo
  </code>,
]
`;

exports[`ValidationErrorMessage renders an error for an unknown error code 1`] = `
Array [
  "Error code: ",
  <code>
    unknown
  </code>,
]
`;

exports[`ValidationErrorMessage renders an error with a custom message 1`] = `null`;
